vite-project/src/components/About.css
.about-container {
    height: 680px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 30px;
    margin-top: -40px;
    position: relative;
    color: rgb(196, 195, 195);
    background-color: rgb(0, 0, 0, 0.5);
}

.light-about-container {
    height: 580px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 30px;
    margin-top: -40px;
    position: relative;
    color: rgb(0, 0, 0);
    background-color: rgba(249, 248, 248, 0.2);
    backdrop-filter: blur(0.2rem);
}

h1 {
    font-size: 2rem;
    margin: 0;
    letter-spacing: 2px;
    font-weight: 600;
    color: #dddddd;
    /* color: rgb(93, 168, 203); */
}

.about-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: url(/star.jpg) no-repeat center center fixed;
    background-size: contain;
    height: 700px;
    width: 100vw;
}

.light-about-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: url(/star.jpg) no-repeat center center fixed;
    background-repeat: no-repeat;
    background-size: cover;
    height: 600px;
    width: 100vw;
}

.light-intro {
    color: rgb(0, 0, 0);
    font-weight: 600;
}

.about {
    text-align: center;
    margin-bottom: 25px;
    margin-top: 100px;
    color: rgb(196, 195, 195);
}

section > h3 {
    font-weight: 400;
}

.intro {
    font-weight: 400;
}

@media (min-width: 1000px) {
    .about-wrapper {
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-image: url(/star.jpg);
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center top;
        height: 700px;
        width: 100vw;
    }
}

@media (max-width: 1000px) {
    .about-wrapper {
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-image: url(/star.jpg);
        background-repeat: no-repeat;
        background-size: contain;
        background-position: center top;
        height: 500px;
        width: 100vw;
    }

    .about-container {
        height: 500px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding: 30px;
        margin-top: -40px;
        position: relative;
        color: rgb(196, 195, 195);
        background-color: rgb(0, 0, 0, 0.5);
    }
}

@media (max-width: 620px) {
    .about-wrapper {
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-image: url(/star.jpg);
        background-repeat: no-repeat;
        background-size: contain;
        background-position: center top;
        height: 400px;
        width: 100vw;
    }

    .about-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding: 30px;
        padding-top: 350px;
        position: relative;
        color: rgb(196, 195, 195);
        background-color: rgb(0, 0, 0, 0);
        padding-bottom: -20px;
    }
}

@media (max-width: 450px) {
    .about-wrapper {
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-image: url(/star.jpg);
        background-repeat: no-repeat;
        background-size: contain;
        background-position: center top;
        height: 400px;
        width: 100vw;
    }

    .about-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding: 30px;
        /* padding-top: 370px; */
        position: relative;
        color: rgb(196, 195, 195);
        background-color: rgb(0, 0, 0, 0);
        padding-bottom: -20px;
    }
}

